--- a/css/main.css
+++ b/css/main.css
@@ -1,53 +1,10 @@
 /* Place CSS styles here */
 body{
-    background-color: rgba(205, 62, 10, 0.693);
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f7c469;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color:#000000   
 }
-/* This is for the navbar at the top*/
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: sticky;
-  }
-  li {
-    display: inline;
-  }
-  ul {
-    background-color: #dddddd;
-  }
-  ul {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 700;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: sticky;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: #f1d1d3;
-  }
-  .active {
-    background-color: #04AA6D;
-  }
 
-  * {box-sizing:border-box}
 /*this is for the slideshow*/
 
 .purple-penguin {
@@ -198,4 +155,81 @@ input[type=text] {
         padding: 10px;
       }
 
+/* New Navigation Bar */
+      nav {
+        margin: 27px auto 0;
+      
+        position:sticky;
+        width: 310px;
+        height: 50px;
+        background-color: #f7c469;
+        border-radius: 8px;
+        font-size: 0;
+        
+      }
+      nav a {
+        line-height: 50px;
+        height: 100%;
+        font-size: 15px;
+        display: inline-block;
+        position: relative;
+        z-index: 1;
+        text-decoration: none;
+        text-transform: uppercase;
+        text-align: center;
+        color: white;
+        cursor: pointer;
+      }
+      nav .animation {
+        position: absolute;
+        height: 100%;
+        top: 0;
+        z-index: 0;
+        transition: all .5s ease 0s;
+        border-radius: 8px;
+      }
+      a:nth-child(1) {
+        width: 100px;
+      }
+      a:nth-child(2) {
+        width: 110px;
+      }
+      a:nth-child(3) {
+        width: 100px;
+      }
+      nav .start-home, a:nth-child(1):hover~.animation {
+        width: 100px;
+        left: 0;
+        background-color: #1abc9c;
+      }
+      nav .start-about, a:nth-child(2):hover~.animation {
+        width: 110px;
+        left: 100px;
+        background-color: #e74c3c;
+      }
+      nav .start-blog, a:nth-child(3):hover~.animation {
+        width: 100px;
+        left: 210px;
+        background-color: #3498db;
+      }
+      
+      body {
+        font-size: 12px;
+        font-family: sans-serif;
+        background: #f7c469;
+      }
+      
+      span {
+          color: #2BD6B4;
+      }
+/* For the text of my name at the top */
+      .logo-header{
+        text-align: center;
+        text-transform: uppercase;
+        font-size: x-large;
+        font-weight: 900;
+        color: #ffffff;
+        text-shadow: 2px 2px 4px #000000;
+        line-height: 2px;
+      }
       
